fix mobile main nav and popup paragraph spacing

--- a/assets/sass/base/_nav.scss
+++ b/assets/sass/base/_nav.scss
@@ -217,6 +217,7 @@
 
 		&.focus {
 			.sub-menu {
+				pointer-events: all;
 				margin-left: 10px;
 				position: relative;
 				opacity: 1;
